# llm_observability_platform

./: .gitignore  INTERNAL_NOTES.md  Makefile  README.md
meridian-sdk/: pyproject.toml
meridian-sdk/meridian/: __init__.py  middleware.py  tracer.py
meridian-sdk/meridian/wrappers/: __init__.py  cost.py  langchain_llm.py  langgraph.py
meridian-sdk/scripts/: demo_instrument.py  demo_instrument_mock.py
meridian-sdk/tests/: test_cost.py  test_tracer.py
meridian-server/: .env.example  requirements.txt
meridian-server/server/: db.py  main.py  models.py  otlp.py
meridian-server/server/alerts/: engine.py  rules.py  websocket.py
meridian-server/server/api/: alerts.py  cost.py  regression.py  runs.py  spans.py
meridian-server/tests/: test_alerts.py  test_api.py  test_otlp.py
meridian-ui/: index.html  package-lock.json  package.json  vite.config.ts
meridian-ui/src/: App.tsx  index.css
meridian-ui/src/api/: client.ts  websocket.ts
meridian-ui/src/components/: AlertFeed.tsx  CostChart.tsx  LatencyHeatmap.tsx  Overview.tsx  PromptDiff.tsx  RegressionView.tsx  RunList.tsx  TraceWaterfall.tsx
